--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -19,7 +19,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: url('/images/hero-bg.jpg') center/cover;
+  images:('/images/hero-bg.jpg') center/cover;
   opacity: 0.1;
   z-index: 0;
 }
